--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 menu {
   float: left;
   min-width: 520px;
-  width: 35vw;
+  width: 30vw;
 
   h4 {
     margin: 15px 0;
@@ -285,4 +285,14 @@ h6 {
     padding-left: 10px;
     font-size: 18px;
   }
+}
+
+/*charts*/
+.chartContainer {
+  border: 6px outset #524800;
+  float: left;
+  margin: 25px;
+  padding: 15px;
+  width: 660px;
+  background-color: rgba(0, 0, 0, 0.35);
 }
