--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+:root {
+  --background-light-color: #4c1010;
+  --background-dark-color: #230000;
+  --background-third-color: #522100;
+  --border-color: #524800;
+}
+
+h5 {
+  color: dimgray;
+  font-weight: normal;
+  margin-left: 30px;
+}
+
 html {
   --s: 75px; /* control the size*/
-  --c1: #4c1010;
-  --c2: #522100;
+  --c1: var(--background-light-color);
+  --c2: var(--background-third-color);
 
   --_s: calc(2 * var(--s)) calc(2 * var(--s));
   --_g: 35.36% 35.36% at;
@@ -41,14 +54,17 @@ body {
   width: 80vh;
   margin: 30px;
   margin-bottom: 0;
+  margin-right: 3px;
   margin-left: 5%;
-  border: 6px outset #524800;
+  border: 6px outset var(--border-color);
 }
 
 menu {
+  margin-left: 0;
+  padding: 0;
   float: left;
-  min-width: 520px;
-  width: 30vw;
+  min-width: 250px;
+  width: 10vw;
 
   h4 {
     margin: 15px 0;
@@ -68,16 +84,22 @@ menu {
     margin: 20px 0;
     font-size: 15px;
     height: 40px;
-    width: 170px;
+    width: 100%;
   }
   #refreshDisplay {
     position: fixed;
     bottom: 40px;
-    left: 10px;
+    right: 10px;
     height: 50px;
     width: 80px;
   }
+  label {
+    text-align: center;
+  }
   select {
+    display: block;
+    width: 90%;
+    text-align: center;
     font-weight: bold;
     padding: 2px;
     margin: 5px;
@@ -90,9 +112,9 @@ menu {
   }
   input[type='range'] {
     appearance: none;
-    background: rgb(35, 0, 0);
+    background: var(--background-dark-color);
     height: 20px;
-    width: 70%;
+    width: 100%;
     border-radius: 15px;
   }
   input[type='range']::-webkit-slider-thumb {
@@ -103,6 +125,12 @@ menu {
     background-color: goldenrod;
     cursor: pointer;
   }
+  #precentageMinValue,
+  #precentageMaxValue {
+    width: 70%;
+    text-align: center;
+  }
+
   label[for='secondElectionCheckbox'] {
     &:hover {
       cursor: pointer;
@@ -125,59 +153,15 @@ menu {
     }
   }
 
-  input[type='radio'] {
-    margin: 0;
-    appearance: none;
-    width: 65px;
-    height: 25px;
-    background-color: rgb(35, 0, 0);
-    &:hover {
-      border: 2px solid goldenrod;
-    }
-    &:checked {
-      &[value='centrum'] {
-        background-color: #ffff99;
-      }
-      &[value='prawica'] {
-        background-color: #9999ff;
-      }
-      &[value='lewica'] {
-        background-color: #ff5555;
-      }
-      &[value='inni'] {
-        background-color: dimgray;
-      }
-      &[value='zignoruj'] {
-        background-color: pink;
-      }
-    }
-  }
   input[type='color'] {
-    background-color: rgb(35, 0, 0);
-  }
-  table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    border-spacing: 5px;
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 10px;
-    background-color: rgba(74, 74, 74, 0.4);
-  }
-  th,
-  td {
-    height: 25px;
-    padding: 0;
-    border: 1px solid black;
-    user-select: none;
-    white-space: nowrap;
+    background-color: var(--background-dark-color);
   }
 }
 nav {
   overflow-x: hidden;
   width: 100%;
   min-height: 90px;
-  background-color: rgb(35, 0, 0);
+  background-color: var(--background-dark-color);
   a {
     margin: 20px max(3vw, 30px);
     padding: 10px 0;
@@ -185,16 +169,16 @@ nav {
     display: border-box;
     float: left;
     color: white;
-    background-color: #4c1010;
+    background-color: var(--background-light-color);
     font-size: 30px;
     min-width: 200px;
     width: 15vw;
     text-decoration: none;
-    border: 1px solid #4c1010;
+    border: 1px solid var(--background-light-color);
     border-radius: 15px;
     &:hover {
-      background-color: #522100;
-      border: 1px solid #524800;
+      background-color: var(--background-third-color);
+      border: 1px solid var(--border-color);
     }
     &.disabled {
       color: goldenrod;
@@ -202,7 +186,7 @@ nav {
       &:hover {
         background-color: black;
         cursor: default;
-        border: 1px solid #4c1010;
+        border: 1px solid var(--background-light-color);
       }
     }
   }
@@ -212,8 +196,15 @@ nav {
   margin: 10px 0;
   width: 150px;
   height: 30px;
-  border: 5px outset #524800;
+  border: 5px outset var(--border-color);
   background-color: black;
+}
+
+#groupingGradients div {
+  background-color: black;
+  margin: 10px 0;
+  width: 150px;
+  height: 20px;
 }
 
 input:not(:checked) + .secondElectionContainer {
@@ -287,12 +278,96 @@ h6 {
   }
 }
 
+table {
+  float: left;
+  font-size: 0.8rem;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border-spacing: 5px;
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin: 10px;
+  margin-top: 30px;
+  padding: 5px;
+  background-color: rgba(74, 74, 74, 0.4);
+}
+th,
+td {
+  height: 25px;
+  padding: 0;
+  border: 1px solid black;
+  user-select: none;
+  white-space: nowrap;
+}
+input[type='radio'] {
+  margin: 0;
+  appearance: none;
+  width: 60px;
+  height: 25px;
+  background-color: var(--background-dark-color);
+  &:hover {
+    border: 2px solid goldenrod;
+  }
+  &:checked {
+    &[value='centrum'] {
+      background-color: #ffff99;
+    }
+    &[value='prawica'] {
+      background-color: #9999ff;
+    }
+    &[value='lewica'] {
+      background-color: #ff5555;
+    }
+    &[value='inni'] {
+      background-color: dimgray;
+    }
+    &[value='zignoruj'] {
+      background-color: pink;
+    }
+  }
+}
+
 /*charts*/
 .chartContainer {
-  border: 6px outset #524800;
+  border: 6px outset var(--border-color);
   float: left;
   margin: 25px;
   padding: 15px;
-  width: 660px;
-  background-color: rgba(0, 0, 0, 0.35);
+  width: 800px;
+  background-color: rgba(0, 0, 0, 0.9);
+  p {
+    font-size: 12px;
+    text-align: center;
+    margin: 0;
+    color: dimgray;
+  }
+  div {
+    border-radius: 50px;
+  }
+}
+input:not(:checked) + .specificRegionContainer {
+  select,
+  input[type='text'] {
+    background-color: dimgray;
+  }
+}
+
+input[type='text'] {
+  width: 90%;
+}
+
+.bubbleGradientDisplay {
+  background:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1) 80%),
+    linear-gradient(
+      to right,
+      red 0%,
+      purple 49.9%,
+      white 50.1%,
+      purple 50.1%,
+      blue 100%
+    );
+  height: 30px;
+  width: 90%;
+  margin: 0 auto;
 }
